--- a/coffeeshop_frontend/index.html
+++ b/coffeeshop_frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/image/starluck.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Star Luck Coffee Shop</title>
+    <title>Star Luck Cafe</title>
   </head>
   <body>
     <div id="root"></div>
